--- a/Hanger/WebContent/WEB-INF/web.xml
+++ b/Hanger/WebContent/WEB-INF/web.xml
@@ -26,7 +26,7 @@
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>
-      index.jsp
+      join.do
     </welcome-file>
   </welcome-file-list>
   <filter>
