--- a/Hanger/WebContent/WEB-INF/web.xml
+++ b/Hanger/WebContent/WEB-INF/web.xml
@@ -22,11 +22,11 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
-    <url-pattern>*.do</url-pattern>
+    <url-pattern>*.hang</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>
-      join.do
+      join.hang
     </welcome-file>
   </welcome-file-list>
   <filter>
