--- a/Hanger/.settings/org.eclipse.core.resources.prefs
+++ b/Hanger/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/jsp/user/Join.jsp=EUC-KR
 encoding//WebContent/js/common/common.js=EUC-KR
 encoding//WebContent/js/jquery-2.1.3.min.js=EUC-KR
+encoding//WebContent/js/user/join.js=EUC-KR
